--- a/index.html
+++ b/index.html
@@ -4,9 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+        html {
+            font-size: 12px;
+            box-sizing: border-box;
+        }
+        body {
+            background-color: black;
+            color: white;
+            font-family: 'Press Start 2P', cursive;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+        main {
+            width: 100%;
+            height: auto;
+            margin-top: 5%;
+            text-align: center;
+        }
+        .title {
+            font-size: 8rem
+        }
+        h1 {
+            font-size: 3rem;
+        }
+        h2 {
+            letter-spacing: 1rem;
+        }
+        h3 {
+            margin: 2rem;
+            align-self: flex-end;
+        }
+        .box {
+            height: 2rem;
+            width: 100%;
+        }
+        @media screen and (min-width: 500px) {
+            html {
+                font-size: 16px
+            }
+            main {
+                width: 50%;
+            }
+        }
+        @media screen and (min-width: 1800px) {
+            html {
+                font-size: 20px;
+            }
+            main {
+                width: 30%;
+            }
+        }
+
+    </style>
 </head>
-<body style="background: black">
-    
+<body>
+    <main>
+        <h1><span class="title">WAR</span> the Card Game</h1>
+        <h2>a console game</h2>
+        <h3>
+            Loading<span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>
+        </h3>
+        <div class="box">
+            <h3 id="blink">Hit F12</h3>
+        </div>
+
+    </main>
 </body>
 <script src="war.js"></script>
+<script src="main.js"></script>
 </html>
