--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <main>
         <h1><span class="title">WAR</span> the Card Game</h1>
         <h2>a console game</h2>
-        <h3>
-            Loading<span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>
-        </h3>
-        <div class="box">
-            <h3 id="blink">Hit F12</h3>
+        <div id="highScores">
+            <h3>
+                Loading<span id="dot1">.</span><span id="dot2">.</span><span id="dot3">.</span>
+            </h3>
+            <div class="box">
+                <h3 id="blink">Hit F12</h3>
+            </div>
         </div>
 
     </main>
